# sleepless-agent

./: .env.example  .gitignore  README.md  pyproject.toml  run.sh
scripts/: validate_mcp_config.py
src/sleepless_agent/: __main__.py  config.yaml
src/sleepless_agent/chat/: executor.py  handler.py
src/sleepless_agent/core/: daemon.py  executor.py
src/sleepless_agent/interfaces/: __init__.py  bot.py  cli.py  message_client.py  slack_client.py  telegram_bot.py  telegram_client.py
src/sleepless_agent/monitoring/: __init__.py  zhipu_usage.py
src/sleepless_agent/scheduling/: auto_generator.py  scheduler.py
src/sleepless_agent/utils/: mcp_config.py  zhipu_env.py
